# gtk-example-app

./: .gitmodules  Cargo.toml  README.md  build.rs
assets/: resources.xml
assets/ui/: main.blp
src/: main.rs
src/ui/: main.rs  mod.rs
ui/: main.blp
